--- a/app/globals.css
+++ b/app/globals.css
@@ -27,7 +27,13 @@
   align-items: center;
 }
 
+.titulo{
+  padding-top: 0;
+  padding-left: 4rem;
+  padding-bottom: 1rem;
+}
+
 .homeMap{
-  width: 100%;
-  height:38rem;
+  width: 95%;
+  height:31rem;
 }
