--- a/app/globals.css
+++ b/app/globals.css
@@ -1,17 +1,13 @@
 .navegacion {
   background-color: rgb(227, 227, 227); /* Color de fondo */
-  margin-bottom: 4rem; /* Margen inferior */
   color: #505050;
-  padding: 10px 5px; /* Relleno, 10 arriba y abajo, 5 izquierda y derecha */
+  padding: 10px 10px; /* Relleno, 10 arriba y abajo, 5 izquierda y derecha */
   display: flex; /* Mostrar como Flexbox */
   flex-wrap: wrap; /* Ajustar a la pantalla */
-  justify-content: center; /* Centrar los elementos */
+  justify-content: flex-start; /* Centrar los elementos */
   gap: 2rem; /* Espacio entre elementos */
+  margin-bottom: 3rem;
   border-bottom: 1px solid #e1e1e1;
-}
-
-.navegacion a:hover {
-  color: #000;
 }
 
 .contenedor {
@@ -28,9 +24,8 @@
 }
 
 .titulo{
-  padding-top: 0;
-  padding-left: 4rem;
-  padding-bottom: 1rem;
+  color: #67B660;
+  font-size: 2rem;
 }
 
 .homeMap{
