arreglado cosas visuales del mapa

--- a/app/globals.css
+++ b/app/globals.css
@@ -1,15 +1,18 @@
 .navegacion {
   background-color: #d8f6d7; /* Color de fondo */
   background-image: url("../public/background.png");
-  
+  background-repeat:repeat-x;
+  background-size: cover;
   color: #505050;
-  padding: 10px 10px; /* Relleno, 10 arriba y abajo, 5 izquierda y derecha */
+  padding: 0.75% 1% 0.5% 1%; /* Relleno, 10 arriba y abajo, 5 izquierda y derecha */
   display: flex; /* Mostrar como Flexbox */
   flex-wrap: wrap; /* Ajustar a la pantalla */
+  align-items: center;
   justify-content: flex-start; /* Centrar los elementos */
-  gap: 2rem; /* Espacio entre elementos */
-  margin-bottom: 3rem;
+  gap: 2vw; /* Espacio entre elementos */
+  margin-bottom: 1.5%;
   border-bottom: 1px solid #e1e1e1;
+  object-fit: contain;
 }
 
 .contenedor {
@@ -29,10 +32,13 @@
 
 .titulo{
   color: #276422;
-  font-size: 2rem;
+  font-size:2.5vw;
 }
 
 .homeMap{
+  object-fit: contain;
+  display:flex;
+  flex-wrap: wrap;
   width: 95%;
-  height:31rem;
+  height: 80vh;
 }
