Añadidos estilos checkbox

--- a/app/globals.css
+++ b/app/globals.css
@@ -53,3 +53,9 @@
   background-color:#93DFA3;
   color: black;
 }
+
+.Checkbox{
+  margin-top: 1%;
+  margin-bottom: 1%;
+  background-color: #CDFFD7;
+}
