--- a/app/globals.css
+++ b/app/globals.css
@@ -40,14 +40,22 @@
 .titulo{
   font-family: "stentiga";
   color: #0a2d20; /*troleito*/
-  font-size:2.2vw;
+  font-size: 2vi;
 }
 
-.leyenda{
+.leyenda li{
   color: #1f321e;
-  font-size: 1.38vw;
+  font-size: 1.6vi;
   margin-left: 5%;
   font-family:'Gill Sans', 'Gill Sans MT', Calibri, 'Trebuchet MS', sans-serif
+}
+
+.leyenda p{
+  display: flex;
+  font-size: 0.9vi;
+  flex-direction: column;
+  justify-content: flex-end;
+  align-items: flex-end;
 }
 
 .homeMap{
